[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/btree/Editor/while_node/while_node.gd" type="Script" id=1]

[node name="while_node" type="GraphNode"]
offset_right = 32.0
offset_bottom = 29.0
tooltip_text = "A.K.A if node"
title = "while_node"
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.054902, 0, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 0.0627451, 1, 1 )
script = ExtResource( 1 )

[node name="Main" type="HBoxContainer" parent="."]
offset_left = 16.0
offset_top = 24.0
offset_right = 101.0
offset_bottom = 44.0

[node name="Required" type="HBoxContainer" parent="Main"]
offset_right = 45.0
offset_bottom = 20.0

[node name="Label" type="Label" parent="Main/Required"]
offset_top = 3.0
offset_bottom = 17.0

[node name="opt_function" type="OptionButton" parent="Main/Required"]
offset_left = 4.0
offset_right = 45.0
offset_bottom = 20.0
[connection signal="delete_request" from="." to="." method="_on_while_node_close_request"]
[connection signal="resize_request" from="." to="." method="_on_while_node_resize_request"]
